--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,10 +9,13 @@
     "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
+    // "preserveValueImports": true,
+    // "isolatedModules": true,
     "baseUrl": "./",
     "paths": {
       "@lib/*": ["./src/lib/*"],
-      "@store": ["./src/stores/store.ts"]
+      "@store": ["./src/stores/store.ts"],
+      "@src": ["./src/*"]
     }
   }
   // Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
